--- a/AngularWebDimension/src/app/home/home.component.html
+++ b/AngularWebDimension/src/app/home/home.component.html
@@ -18,7 +18,7 @@
             </h1>
             <ul class="menu">
                 <li class="current"> <a routerLink="./home">Home</a></li>
-                <li> <a routerLink="./usuario">Login</a></li>
+                <!-- <li> <a routerLink="./usuario">Login</a></li> -->
                 <li> <a routerLink="./overview" >Dashboard</a></li>
             </ul>
         </header>
