--- a/src/app/configuracoes/configuracoes.component.html
+++ b/src/app/configuracoes/configuracoes.component.html
@@ -3,7 +3,7 @@
     <div class="sidebar">
         <div class="sidemenu">
             <div class="side-user">
-                <div class="side-img"><img src="../../assets/img/logo.svg" alt="" style="width: 50px; height: 50x;">
+                <div class="side-img" routerLink=""><img src="../../assets/img/logo.svg" alt="" style="width: 50px; height: 50x;">
                 </div>
             </div>
 
