--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -9,7 +9,7 @@
     <div class="sidebar">
         <div class="sidemenu">
             <div class="side-user">
-                <div class="side-img"><img src="../../../assets/img/logo.svg" alt="" style="width: 50px; height: 50x;"></div>
+                <div class="side-img" routerLink=""><img src="../../../assets/img/logo.svg" alt="" style="width: 50px; height: 50x;"></div>
             </div>
 
             <ul>
