--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -120,7 +120,7 @@
             </b>
             <img class="img_component5" src="../assets/img/carrousel.png" alt="">
         </div>
-        <div class="comentario_dois">
+        <div class="comentario_unico">
             <img class="img_component4" src="../assets/img/Component 4.png" alt="">
             <div id="texto_comentario">
                 <i>Um projeto útil, facilitando o processo de renderizar e auxilia os animadores, principalmente os mais
