--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,7 +31,6 @@ header {
     font-weight: bolder;
 }
 
-
 .menu {
     list-style: none;
     display: flex;
@@ -254,15 +253,24 @@ header {
 }
 
 .comentario_dois {
-    /* position: absolute; */
     background-color: #EBE7E1;
     width: 592px;
     height: 284px;
     border-radius: 12px;
     margin-left: 34%;
-    margin-top: 12%;
     padding-right: 2%;
     box-shadow: 0px 5px 10px #575757;
+}
+
+.comentario_unico {
+    background-color: #EBE7E1;
+    width: 592px;
+    height: 284px;
+    border-radius: 12px;
+    margin-left: 34%;
+    padding-right: 2%;
+    box-shadow: 0px 5px 10px #575757;
+    margin-top: 60px;
 }
 
 .container5 {
@@ -367,9 +375,15 @@ header {
 }
 
 .footer textarea {
-    margin-top: 3%;
+    margin-left: 1%;
+    margin-top: 60px;
     width: 533px;
     height: 200px;
+}
+
+textarea{
+    margin-left: 1%;
+    margin-top: 4%;
 }
 
 .footer button {
@@ -444,7 +458,7 @@ footer {
     .container1 {
         width: 100%;
         display: block;
-        margin:-10% -7%;
+        margin: -10% -7%;
     }
     .container1 div {
         margin-left: 10%;
@@ -458,8 +472,7 @@ footer {
         float: left;
         margin-right: 13%;
     }
-
-    .container1 button span{
+    .container1 button span {
         margin-left: 23%;
     }
     .titulo_home {
@@ -475,18 +488,15 @@ footer {
         font-size: 20px;
         text-align: left;
         width: 100%;
-       font-size: 22px;
+        font-size: 22px;
     }
-
-    .texto_home p{
+    .texto_home p {
         font-size: 20px;
         font-weight: 500;
     }
-
-   .texto_home img{
-       margin-left: -10%;
-   }
-
+    .texto_home img {
+        margin-left: -10%;
+    }
     .arrow_down {
         display: none;
     }
@@ -496,10 +506,7 @@ footer {
     .img_celular {
         display: none;
     }
-
     /*  */
-
-
     .container2 {
         width: 100%;
         background: #282828;
@@ -557,10 +564,7 @@ footer {
         font-size: 24px;
         font-family: 'Mukta', sans-serif;
     }
-
     /* */
-
-
     .container3 {
         max-width: 100%;
         display: flex;
@@ -570,16 +574,12 @@ footer {
         margin-left: 2%;
         padding-bottom: 10%;
     }
-
-
-   
     .img_component3 {
         display: none;
     }
     .arrow_dois {
         display: none;
     }
-
     /**/
     .container4 {
         margin-top: 60%;
@@ -592,8 +592,8 @@ footer {
         color: #EBE7E1;
         font-size: 40px;
         font-family: 'Ubuntu', sans-serif;
-       text-align: center;
-       justify-content: center;
+        text-align: center;
+        justify-content: center;
     }
     .titulo_clientes {
         margin-left: 18%;
@@ -634,7 +634,6 @@ footer {
         padding-right: 2%;
         box-shadow: 0px 5px 10px #575757;
     }
-
     /**/
     .container5 {
         max-width: 100%;
@@ -689,7 +688,6 @@ footer {
         font-size: 20px;
         font-family: 'Mukta', sans-serif;
     }
-
     /**/
     .footer {
         color: #8D8C8E;
@@ -712,7 +710,7 @@ footer {
         float: left;
         padding: 20px;
         margin: 20px;
-        margin-left: 8%;
+        margin-left: 25%;
     }
     .footer input {
         display: block;
@@ -730,8 +728,8 @@ footer {
         color: #fff;
     }
     .footer textarea {
-        margin-left: 10%;
-        margin-top: -3%;
+        margin-left: 1%;
+        margin-top: 4%;
         width: 533px;
         height: 200px;
     }
@@ -746,5 +744,4 @@ footer {
         margin-top: -10%;
         cursor: pointer;
     }
-   
 }
