--- a/src/app/show-data/show-data.component.html
+++ b/src/app/show-data/show-data.component.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="chart-cpu">
                     <div class="chart-head">
-                        <h3>GPU</h3>
+                        <h3>CPU</h3>
                     </div>
                     <canvas id="canvasProcessador" height="350px" width="1400px"></canvas>
                 </div>
