--- a/src/app/show-data/show-data.component.html
+++ b/src/app/show-data/show-data.component.html
@@ -143,7 +143,14 @@
                     <div class="chart-head">
                         <h3>CPU</h3>
                     </div>
-                    <canvas id="canvasProcessador" height="350px" width="1400px"></canvas>
+                    <!-- <canvas id="canvasProcessador" height="350px" width="1400px"></canvas> -->
+                    <canvas id="canvasProcessador" height="350px" width="700px"></canvas>
+                </div>
+                <div class="chart-ram">
+                    <div class="chart-head">
+                        <h3>Disco</h3>
+                    </div>
+                    <canvas id="canvasDisco" height="350px" width="700px"></canvas>
                 </div>
             </div>
         </main>
