--- a/src/app/show-data/show-data.component.html
+++ b/src/app/show-data/show-data.component.html
@@ -146,7 +146,7 @@
                     <!-- <canvas id="canvasProcessador" height="350px" width="1400px"></canvas> -->
                     <canvas id="canvasProcessador" height="350px" width="700px"></canvas>
                 </div>
-                <div class="chart-ram">
+                <div class="chart-disco">
                     <div class="chart-head">
                         <h3>Disco</h3>
                     </div>
