--- a/src/app/usuario/add-edit-user/add-edit-user.component.html
+++ b/src/app/usuario/add-edit-user/add-edit-user.component.html
@@ -1,1 +1,33 @@
-<p>add-edit-user works!</p>
+<div>
+
+  <body>
+    <img src="../../assets/img/Conexaoum.png" alt="" class="conexao1">
+    <img src="../../assets/img/Conexaodois.png" alt="" class="conexao2">
+
+    <div class="container">
+      <img src="../../assets/img/logo.png" alt="" class="logologin">
+
+
+      <div class="login">
+        <h1 class="titulo space-around">Cadastre-se:</h1>
+        <input class="space-around" type="text" placeholder="E-mail: ">
+        <input class="space-around" type="password" placeholder="Senha:">
+        <input class="space-around" type="text" placeholder="Nome: ">
+        <input class="space-around" type="text" placeholder="Sobrenome: ">
+        <input class="space-around" type="text" placeholder="Telefone: ">
+        <input class="space-around" type="text" placeholder="Id da Maquina: ">
+
+        <!-- <button class="button" (click)="logar()">Login</button> -->
+        <button class="button">Cadastrar</button>
+
+        <a routerLink="">
+          <p style="text-align: center; margin-top: 20px;">Esqueceu sua senha?</p>
+        </a>
+        <p style="text-align: center;">
+          <span>Já tem uma conta?</span>
+          <a routerLink="/login"> Entre aqui</a>
+        </p>
+      </div>
+    </div>
+  </body>
+</div>
