--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,8 +18,8 @@
             </h1>
             <ul class="menu">
                 <li class="current"> <a routerLink="./home">Home</a></li>
-                <!-- <li> <a routerLink="./usuario">Login</a></li> -->
-                <li> <a routerLink="./overview" >Dashboard</a></li>
+                <li> <a routerLink="./login">Login</a></li>
+                <!-- <li> <a routerLink="./overview" >Dashboard</a></li> -->
             </ul>
         </header>
     <div class="container1" id="container1">
