--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,23 +1,16 @@
 <div>
-    
-<body>
-    <img src="imagens/Conexaoum.png" alt="" class="conexao1">
-    <img src="imagens/Conexaodois.png" alt="" class="conexao2">
+  <body>
+    <img src="../../assets/img/Conexaoum.png" alt="" class="conexao1">
+    <img src="../../assets/img/Conexaodois.png" alt="" class="conexao2">
+
     <div class="container">
-        <img src="imagens/logo.png" alt="" class="logo">
-        <h1 class="titulo">Faça seu login:</h1>
-        <input type="text" placeholder="email: ">
-        <input type="password" placeholder="Senha:">
-        <h3>ou</h3>
-        <button class="slack"><span id="slacklogin">Login com o Slack</span><img src="imagens/slack.svg" alt=""></button>
-        <a href="../Dashboard/index.html"><button class="button">Login</button></a>
-        <a href="">
-            <p>Esqueceu sua senha?</p>
-        </a>
-        <p> <span>Não tem uma conta?</span> <a href="cadastro.html">Cadastre-se</a></p>
+      <img src="../../assets/img/logo.png" alt="" class="logologin">
 
+      <app-show-user></app-show-user>
+      <!-- <app-cadastro></app-cadastro> -->
+      <!-- <button (click)="showLogin()">Login</button>
+      <button (click)="showRegister()">Register</button> -->
+      <!-- <router-outlet></router-outlet> -->
     </div>
-</body>
-
-
+  </body>
 </div>
