--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -4,13 +4,11 @@
     <img src="../../assets/img/Conexaodois.png" alt="" class="conexao2">
 
     <div class="container">
-      <img src="../../assets/img/logo.png" alt="" class="logologin">
+      <img routerLink="" src="../../assets/img/logo.png" alt="" class="logologin">
 
-      <app-show-user></app-show-user>
-      <!-- <app-cadastro></app-cadastro> -->
-      <!-- <button (click)="showLogin()">Login</button>
-      <button (click)="showRegister()">Register</button> -->
-      <!-- <router-outlet></router-outlet> -->
+      <!-- <div *ngIf="message" [ngClass]="message.cssClass">{{message.text}}</div> -->
+
+      <app-login></app-login>
     </div>
   </body>
 </div>
