--- a/src/app/overview/overview.component.css
+++ b/src/app/overview/overview.component.css
@@ -134,6 +134,11 @@ header a {
     color: #ebe7e1;
 }
 
+.header-hello {
+    color: #ebe7e1;
+    margin-right: 50px;
+}
+
 .menu-toggler {
     height: 45px;
     width: 45px;
@@ -179,6 +184,13 @@ main {
     justify-content: space-between;
 }
 
+.overview-title {
+    position: absolute;
+    top: 100px;
+    left: 368px;
+
+}
+
 .info-maquina {
     /* display: inline-flex; */
     width: 270px;
@@ -220,15 +232,6 @@ main {
 
 .direito span {
     margin-bottom: 20px;
-}
-
-.filtro {
-    padding: 20px;
-}
-
-.filtro span {
-    position: absolute;
-    font-size: 20px;
 }
 
 details {
@@ -288,36 +291,6 @@ details[open] summary:after {
     transform: rotate(-45deg) translate(0%, 0%);
 }
 
-.filtro-ul {
-    width: 100%;
-    background: #202020;
-    position: absolute;
-    top: calc(100% + .5rem);
-    left: 0;
-    padding: 1rem;
-    margin: 0;
-    box-sizing: border-box;
-    border-radius: 5px;
-    max-height: 200px;
-    overflow-y: auto;
-}
-
-.filtro-li {
-    margin: 0;
-    padding: 1rem 0;
-    color: #ebe7e1;
-    border-bottom: 1px solid #ccc;
-}
-
-.filtro-li :first-child {
-    padding-top: 0;
-}
-
-.filtro-li :last-child {
-    padding-bottom: 0;
-    border-bottom: none;
-}
-
 .btn-relatorio {
     color: #202020;
     background-color: #ebe7e1;
@@ -364,24 +337,21 @@ details[open] summary:after {
 
 .chart-disco, .chart-ram {
     border: 2px solid #202020;
-    width: 100%;
+    width: 50%;
     border-radius: 10px;
     margin-top: .8rem;
 }
 
-.chart-cpu, .chart-gpu {
+.chart3 {
     border: 2px solid #202020;
-    width: 100%;
-    border-radius: 10px;
-    margin-top: .8rem;
+    width: 50%;
+    border-radius: 10px; 
 }
 
-.chart-disco {
-    grid-area: disco;
-}
-
-.chart-cpu {
-    grid-area: cpu;
+.chart4 {
+    border: 2px solid #202020;
+    width: 50%;
+    border-radius: 10px; 
 }
 
 .chart-ram {
@@ -394,6 +364,12 @@ details[open] summary:after {
     align-items: center;
     margin-left: 20px;
     margin-top: 5px;
+}
+
+.stats {
+    display: flex;
+    justify-content: center;
+    font-size: smaller;
 }
 
 .close-mobile-menu {
@@ -703,13 +679,7 @@ details[open] summary:after {
         margin-top: 0;
         margin-left: 0;
     }
-    .filtro {
-        padding: 40px;
-    }
-    .filtro span {
-        position: absolute;
-        font-size: 20px;
-    }
+
     details {
         padding-top: 20px;
     }
