--- a/src/app/usuario/cadastro/cadastro.component.css
+++ b/src/app/usuario/cadastro/cadastro.component.css
@@ -30,14 +30,13 @@ input{
   height: 40px;
   width: 300px;
   background: #6A6C6F;
-  text-align: center;
   font-size: 20px;
   color: #fff;
   border-radius: 100px;
   cursor: pointer;
   margin-top: 20px;
   text-align: center;
-  margin-left: 3%;
+  align-self: center;
 }
 
 button {
@@ -80,6 +79,7 @@ button {
   height: 60px;
   width: 40px;
   align-self: center;
+  cursor: pointer;
 }
 
 .link {
