--- a/src/app/usuario/login/login.component.html
+++ b/src/app/usuario/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login">
   <h1 class="titulo space-around">Faça seu login:</h1>
   <!-- <form [formGroup]="login" #f="ngForm" (ngSubmit)="onSubmit(f)"> -->
-  <form [formGroup]="loginForm" style="text-align: -webkit-center;" (ngSubmit)="onSubmit(loginForm)">
+  <!-- <form [formGroup]="loginForm" style="text-align: -webkit-center;" (ngSubmit)="onSubmit(loginForm)">
     <div *ngIf="(loginForm.controls.email.invalid && loginForm.controls.email.touched) || loginForm.controls.email.dirty">
       <small *ngIf="loginForm.controls.email.errors?.required" class="text-danger">Digite um e-mail</small>
       <small *ngIf="loginForm.controls.email.errors?.pattern" class="text-danger">Por favor, digite um email válido</small>
@@ -34,7 +34,7 @@
       <span>Não tem uma conta?</span> 
       <a routerLink="/cadastro"> Cadastre-se</a>
     </p>
-  </form>
+  </form> -->
 </div>
 
 
