--- a/src/app/overview/overview.component.css
+++ b/src/app/overview/overview.component.css
@@ -333,6 +333,11 @@ details[open] summary:after {
     grid-gap: 1rem;
     width: 100%;
     z-index: 1;
+    padding-left: 0;
+}
+
+.chart-disco{
+    height: 48%;
 }
 
 .chart-disco, .chart-ram {
@@ -352,10 +357,24 @@ details[open] summary:after {
     border: 2px solid #202020;
     width: 50%;
     border-radius: 10px; 
+    margin-top: -45%;
 }
 
 .chart-ram {
     grid-area: ram;
+}
+/* 
+.chart3{
+    margin-top: -100px;
+} */
+
+.chart3{
+    margin-top: 20px;
+}
+
+.video-cpu{
+    margin-left: -350px;
+    width: 100%;
 }
 
 .chart-head {
@@ -781,3 +800,4 @@ details[open] summary:after {
 #canvas {
     margin-top: 21px;
 }
+
